refactor: :hammer: refactor the whole project, checking issues using CheckingStyle-IDEA && convert manual mappers to mapstruct mappers && enhance code readability and quality using functional style